--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-progress": "^1.1.1",
     "class-variance-authority": "^0.7.1",
