--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@uploadcare/upload-client": "^6.14.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
     "next": "15.1.1",
@@ -35,6 +36,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "recharts": "^2.15.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
