--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@uploadcare/react-uploader": "^1.8.1",
     "@uploadcare/upload-client": "^6.14.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
