--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.3",
