--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "motion": "^11.15.0",
     "next": "15.1.1",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
     "react-color-palette": "^7.3.0",
     "react-contexify": "^6.0.0",
     "react-day-picker": "^9.7.0",
@@ -53,6 +54,7 @@
     "@prisma/client": "^6.5.0",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
