--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/extension-accelerate": "^1.2.2",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.7",
@@ -38,6 +39,7 @@
     "react-big-calendar": "^1.19.4",
     "react-color-palette": "^7.3.0",
     "react-contexify": "^6.0.0",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
@@ -55,6 +57,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-big-calendar": "^1.16.2",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
