--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dayjs": "^1.11.13",
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
+    "nanoid": "^5.1.5",
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
